plugins {
    id 'org.jetbrains.intellij' version '1.5.2'
    id 'java'
    id 'groovy'
    id 'org.jetbrains.changelog' version "1.3.1"
}
apply plugin: 'org.jetbrains.changelog'
group 'com.bamboo'
version '1.0.3'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    implementation 'com.alibaba:fastjson:1.2.47'
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.36.0.3'
    implementation group: 'cn.hutool', name: 'hutool-all', version: '5.7.19'
    implementation fileTree(dir:'lib',includes:['*jar'])
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}

intellij {
    plugins = ['java', "com.intellij.properties", "com.intellij.java-i18n"]
//    version = '2022.1.1'
    type = 'IU'
    updateSinceUntilBuild = false
    downloadSources = true
    localPath ="D:\\install\\tools\\Idea\\IntelliJ IDEA 2021.3"

}
runPluginVerifier {
//    "IU-2022.1", "IU-2022.1.1", "IU-2022.1.2", "IU-2022.1.3",
//    "IU-2021.3", "IU-2021.3.1", "IU-2021.3.2", "IU-2021.3.3",
//    "IU-2021.2", "IU-2021.2.1", "IU-2021.2.2", "IU-2021.2.3", "IU-2021.2.4",
//    "IU-2021.1", "IU-2021.1.1", "IU-2021.2.2", "IU-2021.2.3",
//    "IU-2021.1", "IU-2021.1.1", "IU-2021.2.2", "IU-2021.2.3",
//    "IU-2020.3.1", "IU-2020.3.2", "IU-2020.3.3",
//    "IU-2020.2.4", "IU-2020.2.3", "IU-2020.2.2", "IU-2020.2.1",
//   "IU-2020.1.4","IU-2020.1.3","IU-2020.1.2","IU-2020.1.1"
    intellij {
        type = 'IU'
        ideVersions = ["IU-2022.1"]
        downloadDir = "E:\\ides"
        runtimeDir = "E:\\install\\program\\plugins\\jdk\\jdk11"
    }

}

patchPluginXml {
    changeNotes = """
    <h3>v1.0.3</h3>
    <ul>
        <li>版本兼容到2020+</li>
        <li>增加过滤器</li>
    </ul>
    <h3>v1.0.1</h3>
    <ul>
        <li>修复已有bug</li>
        <li>修改文档描述</li>
        <li>增加utool支持（测试中）</li>
    </ul>
      Framework (Beta):<br>
      <em>Spring</em>
      <em>oudianyun</em>
      <em>Spring Cloud Openfeign</em>
      <em>Swagger</em>"""
}
test {
    useJUnitPlatform()
}

